--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facerecognitionbrain",
-    "homepage": "https://bigmanbhas.github.io/face-recognition_brain",
+  "homepage": "https://bigmanbhas.github.io/face-recognition_brain",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.4.1",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "2.1.8",
     "react-tilt": "^0.1.4",
     "tachyons": "^4.12.0",
     "web-vitals": "^1.0.1"
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -33,7 +33,6 @@
   "browserslist": {
     "production": [
       ">0.2%",
-      
       "not op_mini all"
     ],
     "development": [
